# sp_storage

./: LICENSE  README.md  pyproject.toml
sp_storage/: sharepoint.py
